<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fb_app_id">507277695992566</string> 
    
    <string name="app_name">InMap - Salvador Shopping</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_levels">Andar</string>
    <string name="title_clothing_man">Moda Masculina</string>
    <string name="title_clothing_woman">Moda Feminina</string>
    <string name="title_gifts">Presentes</string>
    <string name="title_shoes">Calçados/Bolsas</string>
    <string name="title_eletronics">Eletrônicos</string>
    <string name="title_food">Alimentação</string>
    <string name="title_entertainment">Entretenimento</string>
    <string name="title_bookstore">Livraria</string>
    <string name="title_bank">Banco</string>
    <string name="title_services">Serviços</string>
    <string name="title_carrier">Telefonia</string>
    <string name="title_department">Loja de Departamento</string>
    <string name="title_health">Saúde</string>
    <string name="title_unissex">Unissex</string>
    <string name="title_underwear">Moda Íntima</string>
    <string name="title_cosmetic">Cosméticos/Perfumaria</string>
    <string name="title_sports">Artigos Esportivos</string>
    <string name="title_baby">Artigos infantis/Bebê</string>
    <string name="title_street">Moda Street/Surf/Praia</string>
    <string name="title_optics">Ótica</string>
    <string name="title_bedbathtable">Cama, Mesa e Banho</string>
    <string name="title_jewelry">Joalheria</string>
    <string name="title_accessories">Acessórios/Bijouteria</string>
    <string name="title_home">Utilidades para o Lar</string>
    <string name="title_events">Eventos</string>
    <string name="title_uncategorized">Outros</string>
    <string name="carregando_lojas">Carregando lojas...</string>
    <string name="_categorias">^ Categorias</string>
    <string name="mapa_">Mapa ></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_store_details">StoreDetailsActivity</string>
    <string name="descricao">Descrição</string>
    <string name="apontar_no_mapa">Apontar no Mapa</string>
    <string name="search_hint">Digite o que deseja...</string>
    <string name="message_noitems_list_store">Ops, nada foi encontrado.\n\nConhece alguma loja que deveria aparecer aqui? Conte para gente!</string>
    <string name="msg_error_server">Erro ao atualizar informações. Avise ao desenvolvedor.</string>
    <string name="ver_lojas">Ver lojas</string>
    <string name="msg_mapanaodisponivel">Mapa %s não disponível ainda. Aguarde próximas atualizações...</string>
    <string name="eventos">Eventos</string>
    <string name="reporte_um_problema">Reporte um problema</string>
    <string name="loja_">"Loja: "</string>
    <string name="msg_detalhe">Detalhe o problema, sugestões e comentários abaixo (opcional).\n\n\n</string>
    <string name="email_problems">contralabs@gmail.com</string>
    <string name="reporte_de_problema">Reporte de problema</string>
    <string name="mandar_e_mail_por_">Mandar E-mail por:</string>
    <string name="problemas_"><u>Problemas?</u></string>
    <string name="reportar_problema">Reportar Problema</string>
    <string name="aguarde_">Aguarde...</string>
    <string name="atualizando_">Atualizando...</string>
    <string name="atualiza_o_completa_">Atualização completa.</string>
    <string name="sugerir_loja">Sugerir loja</string>
    <string name="msg_subject_querynotfound">Pesquisei \"%s\" e nada encontrei</string>
    <string name="msg_body_querynotfound">Realizei uma busca por %s e esperava encontrar:\n\n</string>
    <string name="filmes_e_hor_rios">Filmes</string>
    <string name="title_activity_splash">InMap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="salvador_shopping">Salvador Shopping</string>
    <string name="msg_description_cinemark">Confira a programação deste cinema!</string>
    <string name="msg_description_cultura">Confira a programação de eventos!</string>
    <string name="carregando_filmes_">Carregando filmes...</string>
    <string name="error_cinemark">Não foi possível obter os filmes.</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="legendas">Legendas</string>
    <string name="msg_movie_valid">Programação válida de %s</string>
    <string name="carregando_eventos_">Carregando eventos....</string>
    <string name="error_cultura">Não foi possível obter os eventos.</string>
    <string name="msg_ratedialog_title">Precisamos da sua ajuda!</string>
    <string name="msg_ratedialog_msg">Queremos ouvir sua opinião. Dê uma nota, comente, sugira, e critique. Sua opinião é muito importante para nós.\n\nObrigado! =]</string>
    <string name="msg_ratedialog_positive">Opinar</string>
    <string name="msg_ratedialog_neutral">Agora não</string>
    <string name="msg_ratedialog_negative">Nunca</string>
    <string name="sobre">Sobre</string>
    <string name="versao">Versão</string>
    <string name="voltar">Voltar</string>
    <string name="sobre_texto">InMap - Tudo em um só Lugar!\n\nAplicativo em fase beta, desenvolvido pela Contra Labs ( http://www.contralabs.com ).\nEsse aplicativo irá evoluir com o tempo, e queremos que você faça parte disso. Dê seu feedback comentando na página do InMap no Google Play ou por e-mail (contato@contralabs.com).</string>
    <string name="msg_nomaps">Você precisa atualizar o Google Play para exibir corretamente o mapa.</string>
    <string name="msg_exit_area">Obrigado, e volte sempre ao %s!</string>
    <string name="msg_enter_area">Bem vindo ao %s!</string>
    <string name="pesquisar_lojas">Pesquisar</string>
    <string name="programa_o_do_cinema">Filmes</string>
    <string name="msg_notification_open">Toque para ver o mapa, lojas, informações e muito mais...</string>
    <string name="msg_no_internet_maps">Sem conexão com internet. O mapa pode não ser apresentado corretamente.</string>
    <string name="settings">Configurações</string>
    <string name="geral">Geral</string>
    <string name="notificacoes">Notificações</string>
    <string name="pref_key_notif_proximity">pref_key_notif_proximity</string>
    <string name="pref_title_notif_proximity">Notificar ao entrar na área</string>
    <string name="pref_summary_notif_proximity">Exibir notificação quando entrar no Shopping</string>
    <string name="mapa">Mapa</string>

    <string name="pref_key_maps_type">pref_key_maps_type</string>
    <string-array name="pref_entries_maps_type">
        <item>Mapa</item>
        <item>Satélite</item>
        <item>Híbrido</item>
    </string-array>
    <string-array name="pref_values_maps_type">
        <item>Map</item>
        <item>Satellite</item>
        <item>Hibrid</item>
    </string-array>
    <string name="pref_title_maps_type">Tipo de mapa de fundo</string>
    <string name="legal_notices">Avisos Legais</string>
    <string name="ajuda">Ajuda</string>
    <string name="events_empty">Nenhum evento no momento.\n\nFique ligado! =]</string>
    <string name="social">Social</string>
    <string name="usuarios_no_shopping">USUÁRIOS NO SHOPPING</string>
    <string name="msg_peopleinside_login">Você precisa entrar com sua conta do Facebook para visualizar pessoas no Shopping.</string>
    
    
    <string name="pref_key_show_im_inside">pref_key_show_im_inside</string>
    <string name="pref_title_show_im_inside">Mostrar que estou no Shopping</string>
    <string name="pref_summary_show_im_inside">Se conectado ao Facebook, permite que outras pessoas vejam que você está no Shopping.</string>
    <string name="msg_logout">Desconectar conta do Facebook</string>
    <string name="pref_key_social">pref_key_social</string>
    <string name="desconectado_">Desconectado.</string>
    <string name="amigos">Amigos</string>
    <string name="desconhecido">Desconhecido</string>
    <string name="no_friends">Nenhum amigo no shopping... =(</string>
    <string name="invite_label">Convide seus amigos a usar InMap e veja-os online!</string>
    <string name="invite_msg">Ei, conhece o InMap? Além de todas as informações do shopping e lojas, ainda posso ver quem esta no Shopping no momento! Ficou muito fácil encontrar os amigos!</string>

    <string name="pref_key_compass">pref_key_compass</string>
    <string name="pref_title_compass">Modo bússola</string>
    <string name="pref_summary_compass">Modo que o mapa mantém a orientação alinhada com as coordenadas reais.</string>
    <string name="recomendacoes">Recomendações</string>
    <string name="recomendacao_score">Recomendação Score: %s</string>
</resources>