<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_problemas"
        android:title="@string/ajuda"
        android:icon="@drawable/ic_help"
        android:showAsAction="never" />

    <item android:id="@+id/menu_show_on_map"
        android:title="@string/apontar_no_mapa"
        android:icon="@drawable/bt_pin_loja_mapa"
        android:showAsAction="always" />

    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_sobre"
        android:title="@string/sobre"
        android:icon="@drawable/ic_about"
        android:showAsAction="never" />

    <item android:id="@+id/menu_legal_notices"
        android:title="@string/legal_notices"
        android:showAsAction="never" />

</menu>