<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <ListView
        android:id="@+id/list_cultura_eventos"
        android:layout_width="match_parent"
    	android:layout_height="@dimen/culturaevents_height" />
        
	<LinearLayout
        android:id="@+id/layout_loading_cultura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carregando_eventos_" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_error_cultura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="invisible"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_cultura" />
        
        <Button 
            android:id="@+id/btn_cultura_tryagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tentar_novamente"/>

    </LinearLayout>
</merge>