<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/loading_stores"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" >

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar"
            android:layout_centerHorizontal="true"
            android:text="@string/carregando_lojas" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_backtocategorys"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:layout_weight="1"
                android:text="@string/_categorias" />

            <Button
                android:id="@+id/btn_showonmap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
            	android:layout_weight="1"
                android:text="@string/mapa_" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_store"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>